src/components/list-pokemon/style.css
.container {
    max-width: 1120px;
    margin: 0 auto;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
  }
  
  .card {
    -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
    display: block;
    position: relative;
    background-color: white;
    border-radius: 20px;
    margin: 2%;
    width: 25%;
    text-align: center;
    z-index: 0;
    overflow: hidden;
  }
  
  .card:before {
      content: "";
      position: absolute;
      z-index: -1;
      top: -100x;
      right: -100px;   
      height: 60px;
      width: 60px;
      border-radius: 32px;
      transform: scale(1);
      transform-origin: 50% 50%;
      transition: transform 0.25s ease-out;
    }
  
    .card:hover:before {
      transform: scale(21);
    } 
  
  .card:hover h4{
      transition: all 0.3s ease-out;
      color: rgba(255, 255, 255, 0.8);
  }

  .card:hover h6{
    transition: all 0.3s ease-out;
    color: rgba(255, 255, 255, 0.8);
}

  .card__title {
    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
    font-weight: 500;
    font-size: 1rem;
  }

  .card__number {
    font-size: 0.89rem;
    font-weight: 400;
  }

  .type__fire:before {
    background-color: var(--type-fire);
  }
  .type__water:before {
    background-color:var(--type-water);
  }
  .type__bug:before {
    background-color: var(--type-bug);
  }
  .type__grass:before {
    background-color: var(--type-grass);
  }
  .type__poison:before {
    background-color: var(--type-poison);
  }
  .type__fairy:before {
    background-color: var(--type-fairy);
  }
  .type__normal:before {
    background-color: var(--type-normal);
  }
  .type__electric:before {
    background-color: var(--type-electric);
  }
  .type__ground:before {
    background-color: var(--type-ground);
  }

  @media (max-width:798px){
    .card {
      width: 44%;
    }
  }

  @media (max-width:500px){
    .card {
      width: 85%;
    }
  }

  

